Spacing fixes

--- a/src/applications/discharge-wizard/sass/discharge-wizard.scss
+++ b/src/applications/discharge-wizard/sass/discharge-wizard.scss
@@ -122,6 +122,5 @@ $formation-image-path: "~@department-of-veterans-affairs/formation/assets/img";
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px;
   }
 }
